--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar" navbar-default>
+<nav class="navbar" navbar-default>
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="#" class="navbar-brand">Recipe Book</a>
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="" (click)="onSelect('recipe')">Recipes</a>
+          <a href="#" (click)="onSelect('recipe')">Recipes</a>
         </li>
         <li>
             <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
@@ -14,7 +14,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
               <a href="#">Save Data</a>
@@ -27,4 +27,4 @@
       </ul>
     </div>
   </div>
-</div>
+</nav>
